Implemented pathfinding + solved audio problem + changed name of project

--- a/Temple Escape/Motor2D/Motor2D.vcxproj.filters
+++ b/Temple Escape/Motor2D/Motor2D.vcxproj.filters
@@ -43,6 +43,9 @@
     <ClCompile Include="j1FadeToBlack.cpp">
       <Filter>Desenvolupament  ========\Modules</Filter>
     </ClCompile>
+    <ClCompile Include="j1Pathfinding.cpp">
+      <Filter>Desenvolupament  ========\Modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1Window.h">
@@ -110,6 +113,9 @@
     </ClInclude>
     <ClInclude Include="MemLeaks.h">
       <Filter>Desenvolupament  ========</Filter>
+    </ClInclude>
+    <ClInclude Include="j1Pathfinding.h">
+      <Filter>Desenvolupament  ========\Modules</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
