Implemented module particles + improving pathfinding

--- a/Temple Escape/Motor2D/Motor2D.vcxproj.filters
+++ b/Temple Escape/Motor2D/Motor2D.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClCompile Include="Slime.cpp">
       <Filter>Desenvolupament  ========\Modules\Enemies</Filter>
     </ClCompile>
+    <ClCompile Include="j1Particles.cpp">
+      <Filter>Desenvolupament  ========\Modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1Window.h">
@@ -140,6 +143,9 @@
     </ClInclude>
     <ClInclude Include="Slime.h">
       <Filter>Desenvolupament  ========\Modules\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="j1Particles.h">
+      <Filter>Desenvolupament  ========\Modules</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
