--- a/Temple Escape/Motor2D/Motor2D.vcxproj
+++ b/Temple Escape/Motor2D/Motor2D.vcxproj
@@ -77,9 +77,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Bat.cpp" />
-    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="j1Collider.cpp" />
-    <ClCompile Include="j1Enemies.cpp" />
+    <ClCompile Include="j1Entities.cpp" />
     <ClCompile Include="j1FadeToBlack.cpp" />
     <ClCompile Include="j1Main.cpp" />
     <ClCompile Include="j1App.cpp" />
@@ -89,7 +89,7 @@
     <ClCompile Include="j1Particles.cpp" />
     <ClCompile Include="j1Pathfinding.cpp" />
     <ClCompile Include="j1PerfTimer.cpp" />
-    <ClCompile Include="j1Player.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="j1Scene.cpp" />
     <ClCompile Include="j1Timer.cpp" />
     <ClCompile Include="p2Log.cpp" />
@@ -101,15 +101,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bat.h" />
-    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Entity.h" />
     <ClInclude Include="j1Collider.h" />
-    <ClInclude Include="j1Enemies.h" />
+    <ClInclude Include="j1Entities.h" />
     <ClInclude Include="j1FadeToBlack.h" />
     <ClInclude Include="j1Map.h" />
     <ClInclude Include="j1Particles.h" />
     <ClInclude Include="j1Pathfinding.h" />
     <ClInclude Include="j1PerfTimer.h" />
-    <ClInclude Include="j1Player.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="j1Scene.h" />
     <ClInclude Include="j1Timer.h" />
     <ClInclude Include="MemLeaks.h" />
