--- a/Temple Escape/Motor2D/Motor2D.vcxproj
+++ b/Temple Escape/Motor2D/Motor2D.vcxproj
@@ -82,6 +82,7 @@
     <ClCompile Include="j1Entities.cpp" />
     <ClCompile Include="j1FadeToBlack.cpp" />
     <ClCompile Include="j1Fonts.cpp" />
+    <ClCompile Include="j1MainMenu.cpp" />
     <ClCompile Include="j1UI.cpp" />
     <ClCompile Include="j1Main.cpp" />
     <ClCompile Include="j1App.cpp" />
@@ -112,6 +113,7 @@
     <ClInclude Include="j1Entities.h" />
     <ClInclude Include="j1FadeToBlack.h" />
     <ClInclude Include="j1Fonts.h" />
+    <ClInclude Include="j1MainMenu.h" />
     <ClInclude Include="j1UI.h" />
     <ClInclude Include="j1Map.h" />
     <ClInclude Include="j1Particles.h" />
