--- a/Temple Escape/Motor2D/Motor2D.vcxproj
+++ b/Temple Escape/Motor2D/Motor2D.vcxproj
@@ -83,6 +83,7 @@
     <ClCompile Include="j1Entities.cpp" />
     <ClCompile Include="j1FadeToBlack.cpp" />
     <ClCompile Include="j1Fonts.cpp" />
+    <ClCompile Include="j1Language.cpp" />
     <ClCompile Include="j1MainMenu.cpp" />
     <ClCompile Include="j1UI.cpp" />
     <ClCompile Include="j1Main.cpp" />
@@ -117,6 +118,7 @@
     <ClInclude Include="j1Entities.h" />
     <ClInclude Include="j1FadeToBlack.h" />
     <ClInclude Include="j1Fonts.h" />
+    <ClInclude Include="j1Language.h" />
     <ClInclude Include="j1MainMenu.h" />
     <ClInclude Include="j1UI.h" />
     <ClInclude Include="j1Map.h" />
